dev-portal/vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - localhost:8080
    options:
      cors:
        allowOrigin:
        - http://localhost:1234
    routes:
    - matchers:
      - prefix: /api
      routeAction:
        single:
          upstream:
            name: default-petstore-8080
            namespace: gloo-system
